--- a/src/partials/my-projects.html
+++ b/src/partials/my-projects.html
@@ -1,119 +1,4 @@
 <section>
-<<<<<<< Updated upstream
-    <div class="container">
-        <h2>
-            my <span>projects</span>
-        </h2>
-        <ul class="project-catalog">
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>power pulse webservice</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>mimino website</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>vyshyvanka vibes Landing Page</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>green harvest online store</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>wallet webservice</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>chego jewelry website</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>energy flow webservice</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>fruitbox online store</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>English excellence webservice</h3>
-                <a href="">visit 🡥</a>
-            </li>
-            <li class="project-card">
-                <picture>
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                    <source srcset="" media="">
-                </picture>
-                <p>React, JavaScript, Node JS, Git</p>
-                <h3>starlight studio landing page</h3>
-                <a href="">visit 🡥</a>
-            </li>
-        </ul>
-        <button class="js-load-more load-more-hidden">
-            LOAD MORE
-        </button>
-        <button class="js-show-less">
-            SHOW LESS
-        </button>
-    </div>
-=======
   <div class="container">
     <h2 class="catalog-title">
       my <span>projects</span>
@@ -121,160 +6,160 @@
     <ul class="project-catalog">
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img1.jpg     1x,
-                ../img/imgs-my-projects/s5-img1@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img1.jpg     1x,
+                ./img/imgs-my-projects/s5-img1@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">wallet webservice</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img2.jpg     1x,
-                ../img/imgs-my-projects/s5-img2@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img2.jpg     1x,
+                ./img/imgs-my-projects/s5-img2@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">green harvest online store</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img3.jpg     1x,
-                ../img/imgs-my-projects/s5-img3@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img3.jpg     1x,
+                ./img/imgs-my-projects/s5-img3@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">English excellence webservice</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img4.jpg     1x,
-                ../img/imgs-my-projects/s5-img4@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img4.jpg     1x,
+                ./img/imgs-my-projects/s5-img4@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">power pulse webservice</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img5.jpg     1x,
-                ../img/imgs-my-projects/s5-img5@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img5.jpg     1x,
+                ./img/imgs-my-projects/s5-img5@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">mimino website</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img6.jpg     1x,
-                ../img/imgs-my-projects/s5-img6@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img6.jpg     1x,
+                ./img/imgs-my-projects/s5-img6@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">vyshyvanka vibes Landing Page</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img7.jpg     1x,
-                ../img/imgs-my-projects/s5-img7@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img7.jpg     1x,
+                ./img/imgs-my-projects/s5-img7@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">chego jewelry website</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img8.jpg     1x,
-                ../img/imgs-my-projects/s5-img8@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img8.jpg     1x,
+                ./img/imgs-my-projects/s5-img8@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">energy flow webservice</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img9.jpg     1x,
-                ../img/imgs-my-projects/s5-img9@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img9.jpg     1x,
+                ./img/imgs-my-projects/s5-img9@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">fruitbox online store</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
       </li>
       <li class="project-card">
         <img class="project-photo"
-        srcset="../img/imgs-my-projects/s5-img10.jpg     1x,
-                ../img/imgs-my-projects/s5-img10@2x.jpg  2x"
-        src="../img/imgs-my-projects/s5-img1.jpg" 
+        srcset="./img/imgs-my-projects/s5-img10.jpg     1x,
+                ./img/imgs-my-projects/s5-img10@2x.jpg  2x"
+        src="./img/imgs-my-projects/s5-img1.jpg" 
         alt="">
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">starlight studio landing page</h3>
           <a class="project-link" href="https://goit.global/ua/">visit
             <svg>
-              <use href="../img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
+              <use href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow-1"></use>
             </svg>
           </a>
         </div>
@@ -285,7 +170,6 @@
       <button class="btn js-show-less">SHOW LESS</button>
     </div>
   </div>
->>>>>>> Stashed changes
 </section>
 
 <script type="module" src="../js/my-projects.js"></script>
