reviews block, html and css

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -16,24 +16,7 @@
 
         <div class="results-container">
             <ul class="coments-list">
-                <li class="coments-text">       
-                    <p class="author-text">Work with was extraordinary! He turned out to be a very competent and responsible specialist. 
-                    The projects were completed on time and the result exceeded my expectations</p>
-                    
-                    <div class="coments-author">   
-                        <img src="./img/Featured icon.jpg" alt="Natalia Shevchenko" class="author-icon">
-                        <p class="author-name">Natalia Shevchenko</p>
-                    </div>
-                </li>
                 
-                <li class="coments-text">I have the honor to recommend him as an exceptional professional in his field. 
-                    His knowledge and expertise are undeniable. Cooperation with him always brings impressive results.
-
-                    <div class="coments-author">
-                        
-                        <p class="author-name">Dmytro Nazarenko</p>
-                    </div>
-                </li>
 
             </ul>
 
@@ -53,7 +36,8 @@
             </button>
         </div>
     </section>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="../js/reviews.js"></script>
 
     
 </body>
