--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -16,8 +16,6 @@
 
         <div class="results-container">
             <ul class="coments-list">
-                
-
             </ul>
 
         </div>
@@ -29,7 +27,7 @@
                     <use href="../img/svg-icons/symbol-defs.svg#icon-arrow-left2"></use>
                 </svg>
             </button>
-            <button class="btn-next">
+            <button class="btn-next btn-next-hidden">
                 <svg width="24px" height="24px">
                     <use href="../img/svg-icons/symbol-defs.svg#icon-arrow-right2"></use>
                 </svg>       
