--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -32,6 +32,7 @@ cursor: pointer;
 padding: 12px;
 width: 48px;
 height: 48px;
+fill: #e4e5e6;
 }
 
 .btn-next{
@@ -43,9 +44,15 @@ height: 48px;
 cursor: pointer;    
 }
 
-.svg-reviews{
-    fill: #e4e5e6;
+.btn-next-hidden{
+    border: 1px solid #e4e5e6;
+    border-radius: 8px;
+padding: 12px;
+width: 48px;
+height: 48px;
+fill: #e4e5e6;
 }
+
 .results-container{
     padding: 80px 32px 24px 32px;
 }
