--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,42 +1,36 @@
-<section class="footer">
-  <div class="container">
-    <div class="top-position">
-      <!-- Логотип -->
-      <div class="footer-logo">
-        <span class="logo-span">Lloyd</span>
-        <span class="logo-green-span">Jefferson.</span>
-      </div>
-
-      <!-- Соціальні посилання -->
-
-      <ul class="footer-social-links">
-        <li>
-          <a href="https://www.instagram.com/goitclub/" target="_blank"
+<footer class="footer">
+  <div class="container container-footer">
+    <div class="wrapp-logo">
+      <a href="#" class="logo"
+        >Lloyd<span class="logo-header-span">Jefferson.</span></a
+      >
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a href="https://www.instagram.com/goitclub/" class="hover-link"
             >Instagram</a
           >
         </li>
-        <li>
-          <a href="https://www.facebook.com/goITclub/" target="_blank"
+        <li class="footer-item">
+          <a href="https://www.facebook.com/goITclub/" class="hover-link"
             >Facebook</a
           >
         </li>
-        <li>
+        <li class="footer-item">
           <a
-            href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
-            target="_blank"
-            >LinkedIn</a
+            href="https://www.linkedin.com/school/goit-start-your-career-in-it"
+            class="hover-link"
+            >Linkedin</a
           >
         </li>
-        <li>
-          <a href="1ster14ka.github.io/js-avengers/" target="_blank">GitHub</a>
+        <li class="footer-item">
+          <a href="https://github.com/1ster14ka/js-avengers" class="hover-link"
+            >GitHub</a
+          >
         </li>
       </ul>
     </div>
-
-    <!-- Копірайт -->
     <div class="footer-copyright">
-      <span>© Copyright 2024.</span>
-      <span>Made by LloydJefferson</span>
+      <p class="copyright">© Copyright 2024. Made by LloydJefferson</p>
     </div>
   </div>
-</section>
+</footer>
