--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header-container">
     <a href="" class="logo"
-      ><span class="logo-header-span">Lloyd</span>Jefferson.</a
+      >Lloyd<span class="logo-header-span">Jefferson.</span></a
     >
 
     <nav class="navigation">
