--- a/src/partials/my-projects.html
+++ b/src/partials/my-projects.html
@@ -1,5 +1,5 @@
 <section>
-<section class="section-projects" id="projects">
+<section class="section-projects" id="my-projects">
   <div class="container">
     <h2 class="catalog-title">
       my <span>projects</span>
