--- a/src/partials/my-projects.html
+++ b/src/partials/my-projects.html
@@ -1,5 +1,4 @@
-<section>
-<section class="section-projects" id="my-projects">
+<section class="section-projects" id="projects">
   <div class="container">
     <h2 class="catalog-title">
       my <span>projects</span>
@@ -14,7 +13,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">wallet webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -32,7 +30,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">green harvest online store</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -50,7 +47,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">English excellence webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -68,7 +64,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">power pulse webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -86,7 +81,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">mimino website</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -104,7 +98,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">vyshyvanka vibes Landing Page</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -122,7 +115,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">chego jewelry website</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -140,7 +132,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">energy flow webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -158,7 +149,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">fruitbox online store</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
@@ -176,7 +166,6 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">starlight studio landing page</h3>
-          <a class="project-link" href="https://goit.global/ua/">visit
           <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
