--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -7,12 +7,12 @@
   <div class="btn-section">
     <button class="btn-prev btn-prev-hidden">
       <svg class="svg-reviews" width="24px" height="24px">
-        <use href="../img/svg-icons/symbol-defs.svg#icon-arrow-left2"></use>
+        <use href="./img/svg-icons/symbol-defs.svg#icon-arrow-left2"></use>
       </svg>
     </button>
     <button class="btn-next btn-next-hidden">
       <svg width="24px" height="24px">
-        <use href="../img/svg-icons/symbol-defs.svg#icon-arrow-right2"></use>
+        <use href="./img/svg-icons/symbol-defs.svg#icon-arrow-right2"></use>
       </svg>
     </button>
   </div>
