add markup and api review section

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,21 +1,28 @@
 <section class="reviews">
-  <h1 class="reviews-title">REVIEWS</h1>
+  <div class="container">
+    <h2 class="reviews-title">Reviews</h2>
 
-  <div class="results-container">
-    <ul class="coments-list"></ul>
-  </div>
-  <div class="btn-section">
-    <button class="btn-prev btn-prev-hidden">
-      <svg class="svg-reviews" width="24px" height="24px">
-        <use href="./img/svg-icons/symbol-defs.svg#icon-arrow-left2"></use>
-      </svg>
-    </button>
-    <button class="btn-next btn-next-hidden">
-      <svg width="24px" height="24px">
-        <use href="./img/svg-icons/symbol-defs.svg#icon-arrow-right2"></use>
-      </svg>
-    </button>
+    <div class="swiper reviews-swiper">
+      <ul class="swiper-wrapper reviews-swiper-list"></ul>
+
+      <div class="swiper-btn-list">
+        <button type="button" class="swiper-btn swiper-btn-prev">
+          <svg width="24" height="24">
+            <use
+              href="./img/svg-icons/symbol-defs.svg#icon-arrow-narrow-left
+"
+            ></use>
+          </svg>
+        </button>
+        <button type="button" class="swiper-btn swiper-btn-next">
+          <svg width="24" height="24">
+            <use
+              href="./img/svg-icons/symbol-defs.svg#icon-arrow-narrow-right
+"
+            ></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </div>
 </section>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
