--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -26,50 +26,45 @@
           of programming and website development.
         </p>
       </li>
-      <div class="test">
-        <div class="benef-middle">
-          <li class="benef-item-inline">
-            <div class="svg">
-              <svg class="" width="24" height="24" class="benef-icon">
-                <use
-                  href="./img/svg-icons/symbol-defs.svg#icon-message-chat-circle-1"
-                ></use>
-              </svg>
-            </div>
-            <h3 class="benef-subtitle">Communication</h3>
-            <p class="benef-text">
-              Understanding your needs and wants is my priority and I am always
-              available for discussions and open to corrections.
-            </p>
-          </li>
-          <li class="benef-item-inline">
-            <div class="svg">
-              <svg class="" width="24" height="24" class="benef-icon">
-                <use href="./img/svg-icons/symbol-defs.svg#icon-brush-1"></use>
-              </svg>
-            </div>
-            <h3 class="benef-subtitle">Art</h3>
-            <p class="benef-text">
-              Thanks to my creative nature, I am ready to accept challenges and
-              help you bring your ideas to life.
-            </p>
-          </li>
+
+      <li class="benef-item">
+        <div class="svg">
+          <svg class="" width="24" height="24" class="benef-icon">
+            <use
+              href="./img/svg-icons/symbol-defs.svg#icon-message-chat-circle-1"
+            ></use>
+          </svg>
         </div>
-        <li class="benef-item">
-          <div class="svg">
-            <svg class="" width="24" height="24" class="benef-icon">
-              <use
-                href="./img/svg-icons/symbol-defs.svg#icon-hourglass-1"
-              ></use>
-            </svg>
-          </div>
-          <h3 class="benef-subtitle">Urgent execution</h3>
-          <p class="benef-text">
-            I understand how important time is to you. Ready to work quickly and
-            efficiently, without reducing the quality of work.
-          </p>
-        </li>
-      </div>
+        <h3 class="benef-subtitle">Communication</h3>
+        <p class="benef-text">
+          Understanding your needs and wants is my priority and I am always
+          available for discussions and open to corrections.
+        </p>
+      </li>
+      <li class="benef-item">
+        <div class="svg">
+          <svg class="" width="24" height="24" class="benef-icon">
+            <use href="./img/svg-icons/symbol-defs.svg#icon-brush-1"></use>
+          </svg>
+        </div>
+        <h3 class="benef-subtitle">Art</h3>
+        <p class="benef-text">
+          Thanks to my creative nature, I am ready to accept challenges and help
+          you bring your ideas to life.
+        </p>
+      </li>
+      <li class="benef-item">
+        <div class="svg">
+          <svg class="" width="24" height="24" class="benef-icon">
+            <use href="./img/svg-icons/symbol-defs.svg#icon-hourglass-1"></use>
+          </svg>
+        </div>
+        <h3 class="benef-subtitle">Urgent execution</h3>
+        <p class="benef-text">
+          I understand how important time is to you. Ready to work quickly and
+          efficiently, without reducing the quality of work.
+        </p>
+      </li>
     </ul>
   </div>
 </section>
