--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,6 +4,13 @@
       >Lloyd<span class="logo-header-span">Jefferson.</span></a
     >
 
+    <div class="switch-container">
+      <label id="switch" class="switch">
+        <input type="checkbox" onchange="toggleTheme()" id="slider">
+        <span class="slider round overlay"></span>
+      </label>
+    </div>
+
     <nav class="navigation">
       <ul class="nav-list-head">
         <li class="nav-item-head">
@@ -23,4 +30,6 @@
       </svg>
     </button>
   </div>
+
+  <script src="../js/switcher.js"></script>
 </header>
