--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -22,15 +22,14 @@
   line-height: 125%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #292929;
   font-family: 'Impact', sans-serif;
 }
 .span-title {
-  color: #00b068;
+  color: var(--accent-text-color);
 }
 
 .green-text {
-  color: #00b068;
+  color: var(--accent-text-color);
 }
 
 .wrapp-hero {
@@ -45,7 +44,7 @@
 
 .wrapp-hero:hover .background-wrapp,
 .wrapp-hero:focus .background-wrapp {
-  background: #00b068;
+  background: var(--accent-text-color);
 }
 
 .wrapp-hero:hover .wrapp-arrow {
@@ -80,7 +79,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #bcdfd1;
+  background-color: var(--accent-element-color);
   border-radius: 16px;
   width: 165px;
   height: 92px;
@@ -104,7 +103,7 @@
 }
 
 .hero-list {
-  background-color: #e4e5e6;
+  background-color: var(--additional-bcg-color);
   display: flex;
   flex-direction: column;
   align-items: center;
