--- a/src/partials/my-projects.html
+++ b/src/partials/my-projects.html
@@ -15,7 +15,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">wallet webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -38,7 +38,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">green harvest online store</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -61,7 +61,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">English excellence webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -84,7 +84,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">power pulse webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -107,7 +107,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">mimino website</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -130,7 +130,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">vyshyvanka vibes Landing Page</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -153,7 +153,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">chego jewelry website</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -176,7 +176,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">energy flow webservice</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -199,7 +199,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">fruitbox online store</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -222,7 +222,7 @@
         <p class="technologies">React, JavaScript, Node JS, Git</p>
         <div class="project">
           <h3 class="project-name">starlight studio landing page</h3>
-          <a class="project-link" href="https://goit.global/ua/"
+          <a class="project-link" href="https://github.com/1ster14ka/js-avengers"
             >visit
             <svg>
               <use
@@ -234,8 +234,8 @@
       </li>
     </ul>
     <div class="btn-container">
-      <button class="btn js-load-more">LOAD MORE</button>
-      <button class="btn js-show-less">SHOW LESS</button>
+      <button class="js-load-more">LOAD MORE</button>
+      <button class="js-show-less">SHOW LESS</button>
     </div>
   </div>
 </section>
