--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -1,47 +1,38 @@
+.benef-list {
+  display: grid;
+  gap: 32px;
+}
+
 .benefits {
   padding-top: 80px;
+}
+
+.text-green {
+  color: var(--accent-text-color);
 }
 
 .bg-img-benef {
   display: none;
 }
 
-.benef-middle {
+.svg {
+  width: 48px;
+  height: 48px;
+  background-color: #bcdfd1;
+  border-radius: 8px;
   display: flex;
-  flex-direction: column;
-  gap: 32px;
-  margin-bottom: 32px;
 }
 
-.benef-middle li {
+.benef-icon {
+  margin: auto auto;
+}
+
+.test {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
-.title-benef {
-  font-weight: 400;
-  font-size: 52px;
-  line-height: 123%;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  
-  font-family: 'Impact', sans-serif;
-  margin-bottom: 40px;
-}
-.text-green {
-  color: var(--accent-text-color);
-}
-.benef-list {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-.benef-item {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
 .benef-subtitle {
   font-weight: 400;
   font-size: 18px;
@@ -50,6 +41,7 @@
   text-transform: uppercase;
   font-family: 'Poppins', sans-serif;
 }
+
 .benef-text {
   font-weight: 300;
   font-size: 16px;
@@ -58,24 +50,56 @@
   font-family: 'Poppins', sans-serif;
 }
 
-.svg {
-  width: 48px;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--accent-element-color);
-  border-radius: 8px;
+.benef-item {
+  max-width: 320px;
 }
 
-@media only screen and (min-width: 768px) {
+.benef-item {
+  margin: 0 auto;
+}
+.title-benef {
+  font-weight: 400;
+  font-size: 52px;
+  line-height: 123%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  font-family: 'Impact', sans-serif;
+  margin-bottom: 40px;
+}
+.benef-subtitle {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: 0.03em;
+  text-align: start;
+}
+
+@media (max-width: 767px) {
+  .benef-list {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1279px) {
+  .benefits {
+    padding-top: 124px;
+  }
   .title-benef {
-    max-width: 704px;
-    font-weight: 400;
     font-size: 108px;
     line-height: 115%;
     letter-spacing: 0.02em;
-    margin-bottom: 0;
+    margin: 0;
+  }
+
+  .benef-subtitle {
+    font-size: 20px;
+    line-height: 160%;
+  }
+
+  .benef-list {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 32px;
   }
 
   .benef-item {
@@ -83,74 +107,75 @@
   }
 
   .benef-item:nth-child(1) {
-    align-self: flex-end;
-  }
-  .benef-item:nth-last-child(1) {
-    align-self: flex-end;
-    margin-top: 32px;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
   }
 
-  .benef-middle {
-    flex-direction: row;
+  .benef-item:nth-child(2),
+  .benef-item:nth-child(3) {
+    grid-column: span 1;
+    grid-row: 2 / 3;
   }
 
-  .benef-middle li {
-    max-width: 336px;
+  .benef-item:nth-child(2) {
+    grid-column: 1 / 2;
+  }
+
+  .benef-item:nth-child(3) {
+    grid-column: 2 / 3;
+  }
+
+  .benef-item:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
   }
 }
 
-@media only screen and (min-width: 1280px) {
-  .benef-subtitle {
-    font-size: 20px;
-    line-height: 160%;
+@media (min-width: 1280px) {
+  .container {
+    position: relative;
   }
 
-  .benef-list {
-    padding-top: 274px;
+  .benefits {
+    padding-top: 164px;
+  }
+  .title-benef {
+    font-size: 107px;
+    line-height: 115%;
+    letter-spacing: 0.02em;
+    max-width: 681px;
+    position: absolute;
+    top: 0;
+  }
+
+  .bg-img-benef {
+    display: block;
+    position: absolute;
+    top: -116px;
+    right: 0;
+    max-width: 526px;
   }
 
   .benef-item {
     max-width: 384px;
   }
 
-  .benef-middle {
-    /* display: flex;
-    gap: 32px; */
-    margin-bottom: 0;
-  }
-  .test {
-    display: flex;
+  .benef-list {
+    padding-top: 276px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
     gap: 32px;
   }
-  .benef-item:nth-last-child(1) {
-    margin-top: 0;
+
+  .benef-item:nth-child(1) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
   }
 
-  .test li {
-    max-width: 384px;
-  }
-
-  .benefits {
-    padding-top: 164px;
-  }
-
-  .container-benef {
-    position: relative;
-    padding: 0 32px;
-  }
-
-  .title-benef {
-    position: absolute;
-    top: 0;
-    left: 32px;
-  }
-
-  .bg-img-benef {
-    display: block;
-    width: 526px;
-    position: absolute;
-    top: -116px;
-    right: 32px;
-    height: 408px;
+  .benef-item:nth-child(2),
+  .benef-item:nth-child(3),
+  .benef-item:nth-child(4) {
+    grid-column: span 1;
+    grid-row: 2 / 3;
   }
 }
