--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -9,16 +9,14 @@
         <button type="button" class="swiper-btn swiper-btn-prev">
           <svg width="24" height="24">
             <use
-              href="./img/svg-icons/symbol-defs.svg#icon-arrow-narrow-left
-"
+              href="./img/svg-icons/symbol-defs.svg#icon-arrow-narrow-left"
             ></use>
           </svg>
         </button>
         <button type="button" class="swiper-btn swiper-btn-next">
           <svg width="24" height="24">
             <use
-              href="./img/svg-icons/symbol-defs.svg#icon-arrow-narrow-right
-"
+              href="./img/svg-icons/symbol-defs.svg#icon-arrow-narrow-right"
             ></use>
           </svg>
         </button>
