--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,9 +1,14 @@
 <div class="modal-overlay">
-  <div class="header-container test">
+  <div class="header-container">
     <a href="" class="logo"
-      ><span class="logo-header-span">Lloyd</span>Jefferson.</a
+      >Lloyd<span class="logo-header-span">Jefferson.</span></a
     >
-
+    <div class="switch-container">
+      <label id="switch" class="switch">
+        <input type="checkbox" onchange="toggleTheme()" id="slider" />
+        <span class="slider round overlay"></span>
+      </label>
+    </div>
     <button type="button" class="burger-btn modal-btn">
       <svg class="icon-close" width="22" height="16">
         <use href="./img/svg-icons/symbol-defs.svg#icon-x"></use>
