--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
           <a href="#about" class="hover-link">About me</a>
         </li>
         <li class="nav-item-head">
-          <a href="#project" class="hover-link">Projects</a>
+          <a href="#projects" class="hover-link">Projects</a>
         </li>
         <li class="nav-item-head">
           <a href="#contacts" class="hover-link">Contacts</a>
