--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -17,7 +17,9 @@
   </div>
   <ul class="nav-list">
     <li class="nav-item"><a href="#about" class="modal-link">About me</a></li>
-    <li class="nav-item"><a href="#project" class="modal-link">Projects</a></li>
+    <li class="nav-item">
+      <a href="#projects" class="modal-link">Projects</a>
+    </li>
     <li class="nav-item">
       <a href="#contacts" class="modal-link">Contacts</a>
     </li>
