change src icons

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,9 +17,7 @@
               href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow2-1"
             ></use>
           </svg>
-          <a href="#contacts" class="hero-link" target="_blank"
-            >Order the project</a
-          >
+          <a href="#contacts" class="hero-link">Order the project</a>
         </div>
         <div class="background-wrapp"></div>
       </div>
