--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -29,7 +29,7 @@
                 <div class="icon-text">
                   <svg class="title-icon" width="24" height="24">
                     <use
-                      href="../img/svg-icons/symbol-defs.svg#icon-phone-1"
+                      href="./img/svg-icons/symbol-defs.svg#icon-phone-1"
                     ></use>
                   </svg>
                   <a
@@ -44,7 +44,7 @@
                 <div class="icon-text">
                   <svg class="title-icon" width="24" height="24">
                     <use
-                      href="../img/svg-icons/symbol-defs.svg#icon-message-1"
+                      href="./img/svg-icons/symbol-defs.svg#icon-message-1"
                     ></use>
                   </svg>
                   <a
@@ -59,7 +59,7 @@
                 <div class="icon-text">
                   <svg class="title-icon" width="24" height="24">
                     <use
-                      href="../img/svg-icons/symbol-defs.svg#icon-icon-1"
+                      href="./img/svg-icons/symbol-defs.svg#icon-icon-1"
                     ></use>
                   </svg>
                   <a
