--- a/src/css/base.css
+++ b/src/css/base.css
@@ -99,6 +99,18 @@ a:hover {
   color: var(--hover-element-color);
 }
 
+.visually-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .theme-light {
   --base-text-color: #292929;
   --accent-text-color: #00b068;
