--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,12 +3,12 @@
     <a href="" class="logo"
       >Lloyd<span class="logo-header-span">Jefferson.</span></a
     >
-    <div class="switch-container">
+    <!-- <div class="switch-container">
       <label id="switch" class="switch">
         <input type="checkbox" onchange="toggleTheme()" id="slider" />
         <span class="slider round overlay"></span>
       </label>
-    </div>
+    </div> -->
     <button type="button" class="burger-btn modal-btn">
       <svg class="icon-close" width="22" height="16">
         <use href="./img/svg-icons/symbol-defs.svg#icon-x"></use>
