--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -111,7 +111,7 @@
           <use href="./img/svg-icons/symbol-defs.svg#icon-x"></use>
         </svg>
       </button>
-      <h2 class="modalTitle common-span" id="jsTitle"></h2>
+      <p class="modalTitle common-span" id="jsTitle"></p>
       <p class="modalText" id="jsText"></p>
     </div>
   </div>
