--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,5 +31,5 @@
     </button>
   </div>
 
-  <script src="./js/switcher.js"></script>
+  <!-- <script src="./js/switcher.js"></script> -->
 </header>
