--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -21,7 +21,7 @@
               href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow2-1"
             ></use>
           </svg>
-          <a href="" class="hero-link">Order the project</a>
+          <a href="#contacts" class="hero-link">Order the project</a>
         </div>
         <div class="background-wrapp"></div>
       </div>
@@ -35,24 +35,34 @@
   </div>
   <ul class="hero-list">
     <li class="hero-item">
-      <a href="https://www.instagram.com/goitclub/" class="hover-link"
+      <a
+        href="https://www.instagram.com/goitclub/"
+        target="_blank"
+        class="hover-link"
         >Instagram</a
       >
     </li>
     <li class="hero-item">
-      <a href="https://www.facebook.com/goITclub/" class="hover-link"
+      <a
+        href="https://www.facebook.com/goITclub/"
+        target="_blank"
+        class="hover-link"
         >Facebook</a
       >
     </li>
     <li class="hero-item">
       <a
         href="https://www.linkedin.com/school/goit-start-your-career-in-it"
+        target="_blank"
         class="hover-link"
         >Linkedin</a
       >
     </li>
     <li class="hero-item">
-      <a href="https://github.com/1ster14ka/js-avengers" class="hover-link"
+      <a
+        href="https://github.com/1ster14ka/js-avengers"
+        target="_blank"
+        class="hover-link"
         >GitHub</a
       >
     </li>
