--- a/src/css/tech-skills.css
+++ b/src/css/tech-skills.css
@@ -1,53 +1,118 @@
-.section-skills {
-  padding-top: 164px;
-}
-
-.hidden-title {
-  visibility: hidden;
-  display: none;
-}
-
-.marquee {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
   overflow: hidden;
-  position: relative;
-  font-family: 'Pridi', sans-serif;
-  font-weight: 600;
-  font-size: 34px;
-  text-transform: uppercase;
+  clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  background-color: var(--accent-element-color);
-  height: 128px;
+  border: 0;
+}
+
+.tech-skills {
+  padding-top: 80px;
+}
+
+.skills__line {
+  background: var(--accent-element-color);
+  overflow: hidden;
+  padding: 32px 0;
+  will-change: transform;
+  position: relative;
+  z-index: 2;
+}
+
+.skills__line-bottom {
+  background: var(--additional-bcg-color);
+  transform: rotate(2deg);
+  z-index: 1;
+}
+
+.skills__content {
+  display: flex;
+  transform: translateX(0);
+  width: max-content;
+}
+
+.skills__inner {
+  display: flex;
+  flex-shrink: 0;
+  gap: 0;
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+}
+
+.skills__item {
+  color: var(--base-text-color);
+  font-family: 'PoppinsRegular';
+  /* font-weight: 500; */
+  font-size: 32px;
+  line-height: 1.25;
+  text-transform: uppercase;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
 }
 
-.marquee__inner {
-  display: inline-block;
-  padding-left: 100%;
-  animation: marquee 10s linear infinite;
+.skills__line-bottom .skills__item {
+  color: var(--accent-text-color);
 }
 
-.marquee__inner p {
-  display: inline;
-  margin: 0;
+.skills__item:after {
+  content: '•';
+  margin: 0 16px;
+  color: var(--accent-text-color);
 }
 
-.marquee--reverse {
-  background-color: var(--additional-bcg-color);
-  transform: rotate(2deg);
-  height: 128px;
+.skills__line-bottom .skills__item:after {
+  content: '•';
+  color: var(--base-text-color);
 }
 
-.marquee--reverse .marquee__inner {
-  animation-direction: reverse;
-  transform: rotate(-2deg);
-}
-
-@keyframes marquee {
-  from {
-    transform: translateX(0%);
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
   }
-  to {
-    transform: translateX(-100%);
+  100% {
+    transform: translateX(calc(-100% / 5));
+  }
+}
+
+.skills__line-top .skills__content {
+  animation: scroll 10s ease-in-out infinite;
+}
+
+.skills__line-bottom .skills__content {
+  animation: scroll 20s linear infinite;
+  animation-fill-mode: forwards;
+}
+
+@media (min-width: 768px) {
+  .tech-skills {
+    padding-top: 124px;
+  }
+  .skills__item {
+    font-size: 36px;
+    line-height: 1.33;
+  }
+
+  .skills__line {
+    padding: 40px 0;
+  }
+}
+
+@media (min-width: 1280px) {
+  .tech-skills {
+    padding-top: 164px;
+  }
+  .skills__item {
+    font-size: 36px;
+    line-height: 1.33;
+  }
+
+  .skills__line {
+    padding: 40px 0;
   }
 }
