--- a/src/partials/tech-skills.html
+++ b/src/partials/tech-skills.html
@@ -1,19 +1,33 @@
-<section class="section-skills">
-  <h2 class="hidden-title">Section Tech Skills</h2>
-  <div class="marquee">
-    <div class="marquee__inner">
-      <p>
-        HTML/CSS &nbsp;|&nbsp; JAVASCRIPT &nbsp;|&nbsp; REACT &nbsp;|&nbsp;
-        NODE.JS
-      </p>
-    </div>
-  </div>
-  <div class="marquee marquee--reverse">
-    <div class="marquee__inner">
-      <p>
-        HTML/CSS &nbsp;|&nbsp; JAVASCRIPT &nbsp;|&nbsp; REACT &nbsp;|&nbsp;
-        NODE.JS
-      </p>
+<section class="tech-skills">
+  <div class="container-fluid">
+    <div class="skills__container">
+      <h2 class="visually-hidden">Tech skills</h2>
+
+      <div class="skills__line skills__line-top">
+        <div class="skills__content" id="top-skills">
+          <ul class="skills__inner">
+            <li class="skills__item">HTML/CSS</li>
+            <li class="skills__item">JAVASCRIPT</li>
+            <li class="skills__item">REACT</li>
+            <li class="skills__item">NODE.JS</li>
+            <li class="skills__item">REACT NATIVE</li>
+            <li class="skills__item">TYPESCRIPT</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="skills__line skills__line-bottom">
+        <div class="skills__content" id="bottom-skills">
+          <ul class="skills__inner">
+            <li class="skills__item">HTML/CSS</li>
+            <li class="skills__item">JAVASCRIPT</li>
+            <li class="skills__item">REACT</li>
+            <li class="skills__item">NODE.JS</li>
+            <li class="skills__item">REACT NATIVE</li>
+            <li class="skills__item">TYPESCRIPT</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </section>
